Fix: QCheckbox vertical alignment (#632)

--- a/src/components/option-group/option-group.ios.styl
+++ b/src/components/option-group/option-group.ios.styl
@@ -1,6 +1,7 @@
 .q-option-inner
   display inline-block
   color $grey-7
+  line-height 0
 
   &.active
     color $primary
